spacing corrections completed

--- a/css/nathanielmordetzky.css
+++ b/css/nathanielmordetzky.css
@@ -1,14 +1,15 @@
-.rectangle-first{
+.rectangle-first {
   width: 99%;
   height: 135px;
   border-radius: 5px;
   border: #f2f2f2 2px solid;
 }
-/*top blue section*/
-.blue-top{
+
+/* top blue section */
+
+.blue-top {
   padding: 10px;
   height: 60px;
-  /*top: 50px;*/
   background-color: #f1f6ff;
   border-bottom: #f2f2f2 2px solid;
   color: #000066;
@@ -16,7 +17,8 @@
   font-weight: 600;
   font-size: 140%;
 }
-.browse-button{
+
+.browse-button {
   color: #0073e6;
   border-radius: 5px;
   padding: 10px;
@@ -24,38 +26,48 @@
   float: right;
   font-size: 70%;
 }
-/*fingerprint icon*/
-.material-icons{
+
+/* fingerprint icon */
+
+.material-icons {
   vertical-align: middle;
   padding: 0px 5px 0px 0px;
 }
-.blue-master{
+
+.blue-master {
   line-height: 40px;
   color: #9494ba;
   font-size: 65%;
 }
-/*bottom white section*/
-.white-bottom{  
-  background-color: white;
+
+/* bottom white section */
+
+.white-bottom {  
+  background-color: #ffffff;
   padding: 10px;
   font-family: tahoma;
-}  
-.fire-bit{
+} 
+
+.fire-bit {
   vertical-align: middle;
   padding: 3px;
 }
-/*right floated primitive text*/
-.primeval-textstring{
+
+/* right floated primitive text */
+
+.primeval-textstring {
   font-family: courier;
   line-height: 175%;
   float: right;
   color: #4d4d4d;
 }
-.lighter-primeval{
+
+.lighter-primeval {
   color: #a6a6a6;
   padding: 4px;
   padding-left: 20px;
 }
-.darker-primeval{
+
+.darker-primeval {
   border-bottom: dotted #e6e6e6;
 }
